--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "@vercel/analytics": "^1.5.0",
     "animejs": "^3.2.1",
     "axios": "^0.24.0",
     "bootstrap": "^5.2.0",
