--- a/package.json
+++ b/package.json
@@ -24,18 +24,20 @@
     "vue-router": "^4.1.3"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.27.0",
+    "@babel/preset-env": "^7.26.9",
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-plugin-router": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
     "@vue/compiler-sfc": "^3.2.37",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "babel-eslint": "^10.1.0",
     "eslint": "^8.57.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.20.0",
     "prettier": "^2.7.1",
     "sass": "^1.86.3",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "vue-eslint-parser": "^10.1.3"
   }
 }
