--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.20.0",
+    "file-loader": "^6.2.0",
     "prettier": "^2.7.1",
     "sass": "^1.86.3",
     "sass-loader": "^8.0.2",
