--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prettier": "^2.7.1",
     "sass": "^1.86.3",
     "sass-loader": "^8.0.2",
+    "url-loader": "^4.1.1",
     "vue-eslint-parser": "^10.1.3"
   }
 }
